samples/_failures_safe/1761446978_1c9c84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73d4032e.c: In function ‘main’:
./samples/SAFE/__tmp_73d4032e.c:170:16: error: missing terminating " character
  170 |         printf("Current state: %s
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_73d4032e.c:170:9: error: expected expression at end of input
  170 |         printf("Current state: %s
      |         ^~~~~~
./samples/SAFE/__tmp_73d4032e.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73d4032e.c:170:9: error: expected declaration or statement at end of input
